--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <link href="./styles/index.scss" rel="stylesheet">
 </head>
 <body>
-  Yellow
+  <div id="app"></div>
+  <script src="./scripts/app.js"
 </body>
 </html>
